--- a/nodejsTest/project.config.json
+++ b/nodejsTest/project.config.json
@@ -7,6 +7,6 @@
 		"newFeature": true
 	},
 	"appid": "wxfe7a9ca3dd15d742",
-	"projectname": "nodejsTest1",
+	"projectname": "nodejsTest",
 	"condition": {}
 }
